--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
       <div class="container">
         <div class="box">
           <div
-            class="col-lg-6 d-flex align-items-center flex-column justify-content-center gap-2 p-4"
+            class="col-lg-6 d-flex align-items-center flex-column justify-content-center gap-1 p-4"
           >
+            <h3 class="title">Sign Up</h3>
             <div id="firstname" class="d-flex flex-column gap-1">
               <label>First Name</label>
               <input type="text" placeholder="First Name" />
@@ -47,6 +48,13 @@
               <p></p>
             </div>
             <button id="submit">SignUp</button>
+            <div class="login">
+              <p style="color: white">Don't have an account ?</p>
+              <a href="Login.html">Login</a>
+            </div>
+          </div>
+          <div class="signup-img">
+            <img src="./Images/Sign up.gif" alt="" />
           </div>
         </div>
       </div>
