--- a/Login.html
+++ b/Login.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Examination System</title>
+    <title>Login</title>
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css.map" />
     <link rel="stylesheet" href="./css/Login.css">
 </head>
 <body>
-    <div class="login">
-        <div class="login-img">
+    <div class="container d-flex justify-content-between mt-5 align-items-center rounded-5 login">
+        <div class="col-lg-6 login-img">
             <img src="./Images/login.gif" alt="">
         </div>
-        <div class="login-form">
+        <div class="col-lg-6 col-md-12 col-sm-12 d-flex flex-column justify-content-center align-items-center p-5 login-form">
             <h1 class="title">Log In</h1>
             <form method="post" id="logIn">
                 <label for="email">Email</label>
@@ -30,6 +33,8 @@
             </div>
         </div>
     </div>
+    <script src="js/all.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
     <script src="./js/Login.js"></script>
 </body>
 </html>
