--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Online Examination System</title>
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css.map" />
@@ -54,7 +54,7 @@
             </div>
           </div>
           <div class="signup-img">
-            <img src="./Images/Sign up.gif" alt="" />
+            <!-- <img src="./Images/Sign up.gif" alt="" /> -->
           </div>
         </div>
       </div>
