--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="signup d-flex align-items-center justify-content-center">
       <div class="container">
-        <div class="box">
+        <div class="box d-flex justify-content-center">
           <div
             class="col-lg-6 d-flex align-items-center flex-column justify-content-center gap-1 p-4"
           >
