feat:add implementation exam screen and start screen

--- a/Login.html
+++ b/Login.html
@@ -43,7 +43,7 @@
         </form>
         <div class="signin">
           <p>Don't have an account ?</p>
-          <a href="index.html"> Sign Up</a>
+          <span id="signup-page"> Sign Up</span>
         </div>
       </div>
     </div>
