--- a/Start.html
+++ b/Start.html
@@ -8,9 +8,16 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css.map" />
     <link rel="stylesheet" href="css/Start.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.js"
+      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <div class="container d-flex justify-content-evenly align-items-center mt-5 rounded-5">
+    <div
+      class="container d-flex justify-content-evenly align-items-center mt-5 rounded-5"
+    >
       <div class="box col-lg-7 col-sm-12">
         <h1 class="title">Rules before start exam</h1>
         <h5>Prepare thoroughly</h5>
@@ -38,11 +45,11 @@
           throughout the process to ensure a smooth and fair online exam
           experience.
         </p>
-        <button class="d-flex rounded-5 gap-3">
-            Start Now
-            <div style="font-size: 18px;">
-                <i class="fa-solid fa-arrow-right fa-fade"></i>
-            </div>
+        <button class="start d-flex rounded-5 gap-3">
+          Start Now
+          <div style="font-size: 18px">
+            <i class="fa-solid fa-arrow-right fa-fade"></i>
+          </div>
         </button>
       </div>
       <div class="col-lg-5 d-flex justify-content-center rounded-5 start-img">
