--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <button id="submit">SignUp</button>
             <div class="login">
               <p style="color: white">Don't have an account ?</p>
-              <a href="Login.html">Login</a>
+              <span id="login-page">Login</span>
             </div>
           </div>
           <div class="signup-img">
