feat: finish implementation exam screen and add flag in questions and remove it

--- a/Exam.html
+++ b/Exam.html
@@ -31,7 +31,7 @@
             <div class="questions d-flex flex-column gap-3">
               <div class="head d-flex justify-content-between p-3">
                 <p class="mb-0 question"></p>
-                <div><i class="fa-regular fa-flag"></i></div>
+                <div><i class="fa-solid fa-flag"></i></div>
               </div>
               <div class="choices d-flex flex-column gap-3">
                 <div name="A" class="Q1 p-2"></div>
