--- a/Fail.html
+++ b/Fail.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Timeout</title>
+    <title>Fail</title>
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css.map" />
-    <link rel="stylesheet" href="./css/Timeout.css" />
+    <link rel="stylesheet" href="./css/Fail.css" />
     <script
       src="https://code.jquery.com/jquery-3.7.1.js"
       integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
@@ -19,13 +19,14 @@
       class="container d-flex justify-content-center align-items-center vh-100"
     >
       <div
-        class="box d-flex flex-column justify-content-center align-items-center text-center rounded-5"
+        class="box d-flex flex-column justify-content-center align-items-center text-center margin-auto rounded-5"
       >
         <div class="col-lg-6 col-11 col-sm-10 py-5 rounded-4">
-          <h1 class="title">Exam Closed</h1>
-          <img src="./Images/Timeout.gif" alt="" />
+          <h1 class="title">Sorry</h1>
+          <img src="./Images/Failure.gif" alt="" />
           <div>
-            <h5 id="user"></h5>
+            <h4 id="user-name"></h4>
+            <p id="user"></p>
           </div>
           <div class="try-again">
             <button type="button">Try Again</button>
@@ -35,6 +36,6 @@
     </div>
     <script src="js/all.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="./js/Timeout.js"></script>
+    <script src="./js/Fail.js"></script>
   </body>
 </html>
