--- a/Start.html
+++ b/Start.html
@@ -16,44 +16,46 @@
   </head>
   <body>
     <div
-      class="container d-flex justify-content-evenly align-items-center mt-5 rounded-5"
+      class="container d-flex justify-content-center align-items-center vh-100"
     >
-      <div class="box col-lg-7 col-sm-12">
-        <h1 class="title">Rules before start exam</h1>
-        <h5>Prepare thoroughly</h5>
-        <p>
-          by checking technical requirements, gathering materials, and setting
-          up a distraction-free environment.
-        </p>
-        <h5>Log in early</h5>
-        <p>
-          follow instructions carefully, and ensure all required tools (e.g.,
-          webcam, microphone) are enabled.
-        </p>
-        <h5>Stay focused</h5>
-        <p>
-          during the exam, manage your time wisely, and avoid prohibited actions
-          to maintain academic integrity.
-        </p>
-        <h5>Submit properly</h5>
-        <p>
-          and confirm your exam has been successfully received before logging
-          out.
-        </p>
-        <h5>Stay calm and honest</h5>
-        <p>
-          throughout the process to ensure a smooth and fair online exam
-          experience.
-        </p>
-        <button class="start d-flex rounded-5 gap-3">
-          Start Now
-          <div style="font-size: 18px">
-            <i class="fa-solid fa-arrow-right fa-fade"></i>
-          </div>
-        </button>
-      </div>
-      <div class="col-lg-5 d-flex justify-content-center rounded-5 start-img">
-        <img src="./Images/Start.gif" alt="" />
+      <div class="row rounded-5 start">
+        <div class="col-lg-6 d-lg-block rules">
+          <h1 class="title">Rules before start exam</h1>
+          <h5>Prepare thoroughly</h5>
+          <p>
+            by checking technical requirements, gathering materials, and setting
+            up a distraction-free environment.
+          </p>
+          <h5>Log in early</h5>
+          <p>
+            follow instructions carefully, and ensure all required tools (e.g.,
+            webcam, microphone) are enabled.
+          </p>
+          <h5>Stay focused</h5>
+          <p>
+            during the exam, manage your time wisely, and avoid prohibited
+            actions to maintain academic integrity.
+          </p>
+          <h5>Submit properly</h5>
+          <p>
+            and confirm your exam has been successfully received before logging
+            out.
+          </p>
+          <h5>Stay calm and honest</h5>
+          <p>
+            throughout the process to ensure a smooth and fair online exam
+            experience.
+          </p>
+          <button class="startBtn d-flex rounded-5 gap-3">
+            Start Now
+            <div style="font-size: 18px">
+              <i class="fa-solid fa-arrow-right fa-fade"></i>
+            </div>
+          </button>
+        </div>
+        <div class="col-lg-6 d-md-none d-lg-block start-img">
+          <img src="./Images/Start.gif" alt="" />
+        </div>
       </div>
     </div>
     <script src="js/all.min.js"></script>
